--- a/b216.tex
+++ b/b216.tex
@@ -1,6 +1,6 @@
 This is now an equation with a label:
 
 \begin{equation}
-\label{eq:}
+\label{eq:1}
 \frac{V_{ sup}^2}{V_{ norm}^2} = [1 + \Delta \nu \, \tau \, T^2 ]^{-1} \, ,
 \end{equation}
