--- a/b216.tex
+++ b/b216.tex
@@ -5,3 +5,4 @@ This is now an equation with a label:
 \frac{V_{ sup}^2}{V_{ norm}^2} = [1 + \Delta \nu \, \tau \, T^2 ]^{-1} \, ,
 \end{equation}
 
+WHis
