--- a/b216.tex
+++ b/b216.tex
@@ -7,3 +7,8 @@ This is now an equation with a label:
 
 Which is refd here in \ref{eq:1}
 
+\begin{equation} \label{eq:erl}
+a = bq + r
+\end{equation}
+
+where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
