--- a/b216.tex
+++ b/b216.tex
@@ -12,3 +12,7 @@ a = bq + r
 \end{equation}
 
 where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
+
+\begin{equation}
+  L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
+ \end{equation}
