--- a/b216.tex
+++ b/b216.tex
@@ -17,4 +17,10 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
   L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
  \end{equation}
  
- 
+ \begin{subequations}
+Maxwell's equations:
+\begin{align}
+        B'&=-\nabla \times E,\\
+        E'&=\nabla \times B - 4\pi j,
+\end{align}
+\end{subequations}
