--- a/b216.tex
+++ b/b216.tex
@@ -17,3 +17,8 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
   L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
  \end{equation}
 
+\[
+ \lim_{x\to 0}{\frac{e^x-1}{2x}}
+ \overset{\left[\frac{0}{0}\right]}{\underset{\mathrm{H}}{=}}
+ \lim_{x\to 0}{\frac{e^x}{2}}={\frac{1}{2}}
+\]
