--- a/b216.tex
+++ b/b216.tex
@@ -17,4 +17,9 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
   L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
  \end{equation}
 
-
+\[
+ z = \overbrace{
+   \underbrace{x}_\text{real} + i
+   \underbrace{y}_\text{imaginary}
+  }^\text{complex number}
+\]
