--- a/b216.tex
+++ b/b216.tex
@@ -17,3 +17,7 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
   L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
  \end{equation}
 
+\[
+ A \xleftarrow{\text{this way}} B 
+  \xrightarrow[\text{or that way}]{ } C
+\]
