--- a/b216.tex
+++ b/b216.tex
@@ -20,4 +20,4 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
 \begin{equation}
  f(x) &= (x+a)(x+b) \\
       &= x^2 + (a+b)x + ab
-\end{align*}
+\end{}
