--- a/b216.tex
+++ b/b216.tex
@@ -14,6 +14,6 @@ a = bq + r
 where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
 
 \begin{equation}
-\label{eq}
+\label{eq:3}
   L' = {L}{\sqrt{1-\frac{v^2}{c^2}}}
  \end{equation}
