--- a/b216.tex
+++ b/b216.tex
@@ -1,6 +1,6 @@
 \section{INtro}\label{sec:1}
 
-As explained in \ref
+As explained in \ref{sec}
 This is now an equation with a label:
 
 \begin{equation}
