--- a/b216.tex
+++ b/b216.tex
@@ -23,4 +23,9 @@ where \eqref{eq:erl} is true if $a$ and $b$ are integers with $b \neq c$.
 
 in \ref{eq:3}
 
+\begin{equation}
+\mathbf{F} = -\beta(\rho) \mathbf{V}
+\label{eq:linearbeta}
+\end{equation}
+
 
