--- a/4942.md
+++ b/4942.md
@@ -1,2 +1,2 @@
 ##Sect MD
-This is a markdown block with cite \cite{Ventorino_2013}. Ok 
+This is a markdown block with cite \cite{Ventorino_2013}. Ok dok.
