--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -10,3 +10,18 @@
   title = {{Chestnut Biomass Biodegradation for Sustainable Agriculture}},
   journal = {{BioResources}},
 }
+
+
+@article{Pepe_2009,
+  doi = {10.1007/s11192-009-0147-2},
+  url = {https://doi.org/10.1007%2Fs11192-009-0147-2},
+  year = {2009},
+  month = {dec},
+  publisher = {Springer Nature},
+  volume = {84},
+  number = {3},
+  pages = {687--701},
+  author = {Alberto Pepe and Marko A. Rodriguez},
+  title = {{Collaboration in sensor network research: an in-depth longitudinal analysis of assortative mixing patterns}},
+  journal = {Scientometrics},
+}
